--- a/JanperCab/5-JanperCab/ClientApp/package.json
+++ b/JanperCab/5-JanperCab/ClientApp/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~9.1.9",
     "@auth0/angular-jwt": "^4.1.2",
     "alertifyjs": "^1.13.1",
+    "ng-lazyload-image": "^8.0.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
