--- a/JanperCab/5-JanperCab/ClientApp/package.json
+++ b/JanperCab/5-JanperCab/ClientApp/package.json
@@ -22,6 +22,7 @@
     "@auth0/angular-jwt": "^4.1.2",
     "alertifyjs": "^1.13.1",
     "ng-lazyload-image": "^8.0.1",
+    "ngx-currency": "^2.3.3",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
