Finished hinge hole option in duraform door form

--- a/JanperCab/5-JanperCab/ClientApp/package.json
+++ b/JanperCab/5-JanperCab/ClientApp/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "^9.1.11",
     "@auth0/angular-jwt": "^4.2.0",
     "alertifyjs": "^1.13.1",
+    "class-transformer": "^0.2.3",
     "ng-lazyload-image": "^8.0.1",
     "ngx-currency": "^2.3.3",
     "rxjs": "~6.5.4",
