--- a/JanperCab/2-Persistent/2-Persistent.csproj
+++ b/JanperCab/2-Persistent/2-Persistent.csproj
@@ -36,13 +36,14 @@
     <Compile Remove="Migrations\20200714011430_FOO.Designer.cs" />
     <Compile Remove="Migrations\20200714011527_foo.cs" />
     <Compile Remove="Migrations\20200714011527_foo.Designer.cs" />
+    <Compile Remove="Migrations\20200714035251_MakeExtraValuesNullable.cs" />
+    <Compile Remove="Migrations\20200714035251_MakeExtraValuesNullable.Designer.cs" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="IdentityServer4.EntityFramework.Storage" Version="3.1.3" />
-    <PackageReference Include="Microsoft.AspNetCore.ApiAuthorization.IdentityServer" Version="3.1.5" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.5" />
+    <PackageReference Include="Microsoft.AspNetCore.ApiAuthorization.IdentityServer" Version="3.1.6" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.6" />
   </ItemGroup>
 
   <ItemGroup>
