--- a/JanperCab/5-JanperCab/ClientApp/package.json
+++ b/JanperCab/5-JanperCab/ClientApp/package.json
@@ -22,6 +22,8 @@
     "@auth0/angular-jwt": "^4.2.0",
     "alertifyjs": "^1.13.1",
     "class-transformer": "^0.2.3",
+    "dompurify": "^2.0.12",
+    "html2canvas": "^1.0.0-rc.7",
     "jspdf": "^2.0.0",
     "ng-lazyload-image": "^8.0.1",
     "ngx-barcode": "^0.3.0",
