--- a/JanperCab/5-JanperCab/appsettings.Staging.json
+++ b/JanperCab/5-JanperCab/appsettings.Staging.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "IcbFileLocation": "\\\\janperapps\\Company\\Import\\NCADImport\\TEST"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=JANPERWEB\\SQLEXPRESS;Initial Catalog=JanperCab;Persist Security Info=True;User ID=sa;Password=QuocB@o1203"
   },
