--- a/JanperCab/5-JanperCab/ClientApp/package.json
+++ b/JanperCab/5-JanperCab/ClientApp/package.json
@@ -22,27 +22,27 @@
     "@auth0/angular-jwt": "^4.2.0",
     "alertifyjs": "^1.13.1",
     "class-transformer": "^0.2.3",
-    "dompurify": "^2.0.12",
+    "dompurify": "^2.2.0",
     "file-saver": "^2.0.2",
     "html2canvas": "^1.0.0-rc.7",
-    "jspdf": "^2.0.0",
+    "jspdf": "^2.1.1",
     "lodash": "^4.17.20",
-    "moment": "^2.27.0",
+    "moment": "^2.29.1",
     "ng-lazyload-image": "^8.0.1",
     "ngx-barcode": "^0.3.0",
-    "ngx-currency": "^2.3.3",
+    "ngx-currency": "^2.5.1",
     "rxjs": "~6.5.4",
-    "tslib": "^1.10.0",
-    "xlsx": "^0.16.6",
+    "tslib": "^1.14.1",
+    "xlsx": "^0.16.8",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.901.11",
-    "@angular/cli": "^9.1.11",
+    "@angular-devkit/build-angular": "^0.901.12",
+    "@angular/cli": "^9.1.12",
     "@angular/compiler-cli": "^9.1.12",
-    "@types/jasmine": "^3.5.11",
+    "@types/jasmine": "^3.6.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.12.50",
+    "@types/node": "^12.19.3",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -53,7 +53,7 @@
     "karma-jasmine-html-reporter": "^1.4.2",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
+    "tslint": "^6.1.3",
     "typescript": "~3.8.3"
   }
 }
