Finish export to ICB all door types

--- a/JanperCab/4-Infrastructure/4-Infrastructure.csproj
+++ b/JanperCab/4-Infrastructure/4-Infrastructure.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\3-Application\3-Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Objects\ICBFile\" />
+  </ItemGroup>
+
 </Project>
