--- a/JanperCab/5-JanperCab/appsettings.json
+++ b/JanperCab/5-JanperCab/appsettings.json
@@ -1,6 +1,6 @@
 {
   "AppSettings": {
-    "IcbFileLocation": "D:\\Test",
+    "IcbFileLocation": "C:\\ccw2015\\ICB\\Import",
     "SecretTokenKey": "d3b6b718-de68-4bb7-aa9b-324d91c70c04",
     "TokenExpiredInDays": 10
   },
