--- a/JanperCab/5-JanperCab/ClientApp/package.json
+++ b/JanperCab/5-JanperCab/ClientApp/package.json
@@ -31,6 +31,7 @@
     "ng-lazyload-image": "^8.0.1",
     "ngx-barcode": "^0.3.0",
     "ngx-currency": "^2.5.2",
+    "onscan.js": "^1.5.2",
     "print-js": "^1.5.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.14.1",
