--- a/JanperCab/5-JanperCab/ClientApp/package.json
+++ b/JanperCab/5-JanperCab/ClientApp/package.json
@@ -23,6 +23,7 @@
     "alertifyjs": "^1.13.1",
     "class-transformer": "^0.2.3",
     "dompurify": "^2.2.6",
+    "event-source-polyfill": "^1.0.22",
     "file-saver": "^2.0.5",
     "html2canvas": "^1.0.0-rc.7",
     "jspdf": "^2.2.0",
