Fixed up the delivery docket routing only null value

--- a/JanperCab/5-JanperCab/appsettings.json
+++ b/JanperCab/5-JanperCab/appsettings.json
@@ -2,7 +2,9 @@
   "AppSettings": {
     "IcbFileLocation": "C:\\ccw2015\\ICB\\Import",
     "SecretTokenKey": "d3b6b718-de68-4bb7-aa9b-324d91c70c04",
-    "TokenExpiredInDays": 365
+    "TokenExpiredInDays": 365,
+    "EmailHostName": "janper.com.au",
+    "NoReplyEmail": "no-reply@janper.com.au" 
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=LAPTOP-6I3EOOI3\\SQLEXPRESS;Initial Catalog=JanperCab;Integrated Security=True"
