--- a/JanperCab/5-JanperCab/ClientApp/package.json
+++ b/JanperCab/5-JanperCab/ClientApp/package.json
@@ -30,6 +30,7 @@
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
     "ng-lazyload-image": "^8.0.1",
+    "ng2-datepicker": "^12.0.0",
     "ngx-barcode": "^0.3.0",
     "ngx-currency": "^2.5.2",
     "onscan.js": "^1.5.2",
